💄 Show scrollbar on todoBox, fix add btn position

--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -6,25 +6,30 @@
 
 .todo-box {
     width: 100%;
-    height: max-content;
-    overflow-y: scroll;
     border-radius: 15px;
     box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.1);
     border: 1px black;
+    display: flex;
+    flex-direction: column;
     flex: 1;
+    overflow: hidden;
 }
 
 .todo-list {
-    position: static;
-    padding: 15px;
+    height: 100%;
+    overflow-y: scroll;
+    padding: 0px 15px 15px 15px;
+    margin-top:15px;
 }
 
 .btn-add-todo {
+    position: relative;
     text-align: center;
     font-size: 18px;
     color: #707070;
+    padding: 10px 0px 10px 0px;
 }
 
-hr{
+hr {
     border-color: #ADADAD;
 }
